Removed test file

--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -759,8 +759,8 @@
             </a>
             
             <div class="nav-links">
-                <a href="#" class="active" data-key="navHome">Home</a>
-                <a href="#" data-key="navContact">Contact</a>
+                <a href="dashboard.html" class="active" data-key="navHome">Home</a>
+                <a href="Contact.html" data-key="navContact">Contact</a>
                 <div class="language-switcher">
                     <i class="fas fa-globe"></i>
                     <select>
